<resources>
    <string name="app_name">Fragment_Martryatus Sofia_20</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="megantara">Megantara</string>
    <string name="playlist">Playlist</string>
    <string name="pengikut">Pengikut</string>
    <string name="_20">20</string>
    <string name="_560k">560k</string>
    <string name="_10">10</string>
    <string name="mengikuti">Mengikuti</string>
    <string name="ilusi_yang_terlihat_semu_yang_terikat">Ilusi yang terlihat semu yang terikat</string>
    <string name="string_premium" />
    <string name="akun_anda_free">Akun anda free</string>
    <string name="premium">Premium</string>
    <string name="todo3">TODO</string>
    <string name="notification">TODO</string>
    <string name="settingstodo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>